oauth2-proxy/01-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: oauth2-proxy
  labels:
    app: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: 143364350185.dkr.ecr.eu-west-2.amazonaws.com/danielfeather/oauth2-proxy:latest
        args:
        - --config=/etc/oauth2proxy/oauth2-proxy-config
        ports:
        - name: web
          containerPort: 4180
