oauth2-proxy/02-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: oauth2-proxy
  labels:
    app: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.4.0
        args:
        - --config=/etc/oauth2proxy/config
        ports:
        - name: web
          containerPort: 4180
        volumeMounts:
        - name: oauth2-proxy-config
          mountPath: /etc/oauth2proxy
          readOnly: true
      volumes:
      - name: oauth2-proxy-config
        configMap:
          name: oauth2-proxy
