oauth2-proxy/02-service.yml
apiVersion: v1
kind: Service
metadata:
    name: oauth2-proxy
spec:
    ports:
    - name: web
      port: 4180
      targetPort: web
    selector:
        app: oauth2-proxy
