oauth2-proxy/03-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: oauth2-proxy
spec:
    tls:
      certResolver: letsencrypt
      domains:
      - main: staging.lancastrian.dev
    entryPoints:
    - websecure
    routes:
    - match: Host(`staging.lancastrian.dev`)
      kind: Rule
      priority: 10
      middlewares:
      - name: auth-headers
      services:
      - name: oauth2-proxy
        port: 4180
